tests/scan/fixtures/validation/negative/clean_cargo_clean_db_crate/src/lib.rs
//! A clean Rust crate: clean_db_crate.

pub fn hello() -> &'static str { "hello" }
